Update layout structure and overflow issues

--- a/web/sass/common.sass
+++ b/web/sass/common.sass
@@ -26,7 +26,7 @@ a
 
 section
   position: relative
-  min-height: 500px
+  // min-height: 500px
   width: 100%
   padding: 50px 50px 0 50px
 
